<?xml version="1.0" encoding="utf-8"?>
<!--
author: Rey Sanayei
description: XML file for the Settings fragment, which displays the player's profile picture and
username. This fragment also allows the user to change their profile picture either through taking
a picture, or through browsing their gallery. A switch for selecting a dark theme is also provided.
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:minWidth="350dp"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".SettingsFragment"
    android:background="@color/background_color">

    <TextView
        android:id="@+id/settings_sub_title_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="10dp"
        android:text="@string/settings_sub_title_2_str"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/browse_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_name_edit_text" />

    <TextView
        android:id="@+id/settings_sub_title_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="10dp"
        android:text="@string/settings_sub_title_3_str"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_header_2" />
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/theme_toggle_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/settings_sub_title_3"
        app:layout_constraintBottom_toBottomOf="@id/settings_sub_title_3"
        android:layout_marginEnd="15dp"/>

    <TextView
        android:id="@+id/settings_sub_title_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="10dp"
        android:text="@string/settings_sub_title_1_str"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/settings_name_edit_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_profile_img_view" />

    <TextView
        android:id="@+id/settings_header_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        android:layout_marginStart="15dp"
        android:text="@string/settings_header_2_str"
        android:textColor="@color/text_color"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidelineB" />

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:text="@string/settings_title_str"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guidelineA"/>

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:src="@drawable/close"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/close_button_description"/>

    <View
        android:id="@+id/guidelineA"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/light_grey"
        app:layout_constraintBottom_toTopOf="@id/settings_header_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_title"
       />

    <TextView
        android:id="@+id/settings_header_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        android:text="@string/settings_header_1_str"
        android:textColor="@color/text_color"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/settings_profile_img_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineA" />

    <ImageView
        android:id="@+id/settings_profile_img_view"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        android:src="@drawable/defualt_profile"
        android:background="@drawable/image_rounded"
        app:layout_constraintBottom_toTopOf="@id/settings_sub_title_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_header_1"
        android:contentDescription="@string/profile_picture_description"/>

    <EditText
        android:id="@+id/settings_name_edit_text"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintHorizontal_weight="2"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        android:inputType="textCapWords"
        android:textColor="@color/text_color"
        android:textColorHint="@color/green"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/settings_sub_title_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/change_name_btn"
        app:layout_constraintTop_toBottomOf="@id/settings_profile_img_view"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/change_name_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="1"
        android:layout_marginHorizontal="5dp"
        android:backgroundTint="@color/green"
        android:textSize="15sp"
        android:text="@string/change_name_btn_str"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/settings_name_edit_text"
        app:layout_constraintLeft_toRightOf="@id/settings_name_edit_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/settings_name_edit_text" />

    <Button
        android:id="@+id/browse_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="5dp"
        app:layout_constraintHorizontal_weight="1"
        android:layout_marginVertical="5dp"
        android:backgroundTint="@color/gold"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:text="@string/browse_btn_str"
        app:layout_constraintBottom_toTopOf="@id/guidelineB"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/camera_btn"
        app:layout_constraintTop_toBottomOf="@id/settings_sub_title_2" />

    <Button
        android:id="@+id/camera_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="20dp"
        app:layout_constraintHorizontal_weight="1"
        android:textSize="15sp"
        android:text="@string/camera_btn_str"
        android:textColor="@color/white"
        android:backgroundTint="@color/gold"
        app:layout_constraintBottom_toBottomOf="@id/browse_btn"
        app:layout_constraintLeft_toRightOf="@id/browse_btn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/browse_btn"/>

    <View
        android:id="@+id/guidelineB"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        android:background="@color/light_grey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/browse_btn"
        app:layout_constraintBottom_toTopOf="@id/settings_header_2"
        tools:layout_editor_absoluteY="398dp" />

</androidx.constraintlayout.widget.ConstraintLayout>