<?xml version="1.0" encoding="utf-8"?>
<!--
author: Rey Sanayei
description: XML file for the Help fragment, which offers a how-to-play guide for the game.
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="350dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HelpFragment"
    android:background="@color/background_color">

    <View
        android:id="@+id/guidelineTop"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/light_grey"
        app:layout_constraintBottom_toTopOf="@id/help_body_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/help_title" />

    <TextView
        android:id="@+id/help_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_title_str"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginVertical="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guidelineTop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />



    <ImageView
        android:id="@+id/close_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:src="@drawable/close"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/close_button_description"/>

    <TextView
        android:id="@+id/help_body_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_body_1_str"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop"
        app:layout_constraintBottom_toTopOf="@id/help_body_2" />

    <TextView
        android:id="@+id/help_body_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        android:text="@string/help_body_2_str"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/help_body_3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/help_body_1" />

    <TextView
        android:id="@+id/help_body_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"

        android:text="@string/help_body_3_str"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/guidelineA"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/help_body_2" />

    <View
        android:id="@+id/guidelineA"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/light_grey"
        app:layout_constraintBottom_toTopOf="@id/help_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/help_body_3"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"/>

    <TextView
        android:id="@+id/help_header_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        android:text="@string/help_header_1_str"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/help_example_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineA" />

    <ImageView
        android:id="@+id/help_example_1"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        android:src="@drawable/correct_example"
        app:layout_constraintBottom_toTopOf="@id/help_example_1_txt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/help_header_1"/>

    <TextView
        android:id="@+id/help_example_1_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        android:text="@string/help_example_1_txt_str"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/help_example_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/help_example_1" />

    <ImageView
        android:id="@+id/help_example_2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        android:src="@drawable/almost_example"
        app:layout_constraintBottom_toTopOf="@id/help_example_2_txt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/help_example_1_txt"/>

    <TextView
        android:id="@+id/help_example_2_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        android:text="@string/help_example_2_txt_str"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/help_example_3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/help_example_2" />

    <ImageView
        android:id="@+id/help_example_3"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        android:src="@drawable/wrong_example"
        app:layout_constraintBottom_toTopOf="@id/help_example_3_txt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/help_example_2_txt"/>

    <TextView
        android:id="@+id/help_example_3_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        android:text="@string/help_example_3_txt_str"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/help_example_3" />

    <View
        android:id="@+id/guidelineB"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/light_grey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/help_example_3_txt"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>